--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -2,6 +2,7 @@
     background-color: #40e0d0;
     height: 100vh;
     width: 100vw;
+    overflow: auto;
 }
 .home{
     text-align: center;
@@ -21,7 +22,7 @@
 .body{
     height: 60px;
 }
-input::placeholder{
+.input-add::placeholder{
     color: grey;
     padding: 4px;
 }
